--- a/NLW#8/index.html
+++ b/NLW#8/index.html
@@ -13,7 +13,7 @@
     />
     <title>DOCTORCARE</title>
   </head>
-  <body onscroll="onScroll()" class="menu-expanded">
+  <body onscroll="onScroll()" class="">
     <nav id="navigation" class="">
       <div class="wrapper">
         <a class="logo" href="#">
@@ -158,7 +158,8 @@
           </ul>
         </div>
 
-        <button  aria-expanded="false"
+        <button onClick="openMenu()"
+         aria-expanded="false"
         aria-label="Abrir menu"
         onclick="openMenu()"
         class="open-menu"
