Finalizado o menu expanded

--- a/NLW#8/index.html
+++ b/NLW#8/index.html
@@ -158,7 +158,7 @@
           </ul>
         </div>
 
-        <button onClick="openMenu()"
+        <button
          aria-expanded="false"
         aria-label="Abrir menu"
         onclick="openMenu()"
