Referenciado os links

--- a/NLW#8/index.html
+++ b/NLW#8/index.html
@@ -70,7 +70,7 @@
         <div class="menu">
           <ul>
             <li><a href="#">Inicio</a></li>
-            <li><a href="#">Serviçoes</a></li>
+            <li><a onclick="closeMenu()" href="#services">Serviçoes</a></li>
             <li><a href="#">Sobre</a></li>
           </ul>
 
@@ -219,7 +219,7 @@
       </div>
     </nav>
 
-    <header class="wrapper">
+    <header id="home" class="wrapper">
       <h4>BOAS-VINDAS A DOCTORCARE</h4>
       <h1>Assistencia médica simplificada para todos</h1>
       <p>
