--- a/NLW#8/index.html
+++ b/NLW#8/index.html
@@ -16,7 +16,7 @@
   <body onscroll="onScroll()" class="">
     <nav id="navigation" class="">
       <div class="wrapper">
-        <a class="logo" href="#">
+        <a class="logo" href="#home">
           <svg
             width="133"
             height="18"
@@ -69,7 +69,7 @@
 
         <div class="menu">
           <ul>
-            <li><a href="#">Inicio</a></li>
+            <li><a onclick="closeMenu()" href="#home">Inicio</a></li>
             <li><a onclick="closeMenu()" href="#services">Serviçoes</a></li>
             <li><a href="#">Sobre</a></li>
           </ul>
