--- a/NLW#8/index.html
+++ b/NLW#8/index.html
@@ -417,6 +417,8 @@
         </div>
       </div>
     </section>
+    
+    <script src="https://unpkg.com/scrollreveal"></script>
     <script src="js/main.js"></script>
   </body>
 </html>
